--- a/style.css
+++ b/style.css
@@ -4,10 +4,27 @@
     
 }
 body{
+    width: 1600px;
+    display: flex;
+    justify-content: center;
     font-family: 'Roboto';
-}
-header{
     
+}
+.container{
+    width: 1200px;
+}
+/* Хедер */
+header{
+    display: flex;
+    justify-content: space-between;
+}
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+}
+ul.navlist li{
+    display: inline;
+    justify-content: space-between;
 }
 /* Hero */
 .section1{
@@ -15,6 +32,8 @@ header{
     flex-direction: column;
     align-items: center;
     background-color: #2F303A;
+    margin:0 -200px 0 -200px;
+    
 }
 .order-btn{
     display: block;
@@ -119,6 +138,7 @@ h1{
 /*section 4*/
 .section4{
     background-color: #F5F4FA;
+    margin:0 -200px 0 -200px;
 }
 .section4-h2{
     font-weight: 700;
@@ -148,6 +168,7 @@ h1{
 /*footer*/
 .footer{
     background-color: #2F303A;
+    margin:0 -200px 0 -200px;
 }
 .footer-adress{
     font-weight: 400;
