--- a/st.css
+++ b/st.css
@@ -3,7 +3,7 @@
     list-style-type: none;
     
 }
-h1,h2,h3,h4,h5,p{
+h1,h2,h3,h4,h5,ul,p{
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -16,26 +16,26 @@ img{
     display: block;
 }
 body{
+    display:flex;
+    flex-direction:column;
     font-family: 'Roboto';
 }
-main{
+header,main,footer{
+    
 }
 .container{
     width: 1200px;
+    display: flex;
+    justify-content: space-between;
 }
-
 
                                 /* Хедер */
 
 header{
-    display: flex;
-    justify-content: center;
-}
-.section0{
+    width: 1200px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 32px auto;
+    margin: 0 auto;
 }
 .nav-container{
     display: flex;
@@ -70,16 +70,9 @@ ul.navlist li{
                             /* Hero */
 
 .section1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-color: #2F303A;
-}
-.section1-1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 200px auto;
+    width: 1600px;
+    /* margin:0 -200px 0 -200px; */
 }
 .section1-container{
     display: flex;
@@ -157,9 +150,8 @@ h1{
 }
 
 /*section 2*/
-.section2>.container{
-    display:flex;
-    justify-content: space-between;
+.section2{
+    width: 1200px;
     margin: auto;
 }
 .ul-section2{
@@ -168,12 +160,8 @@ h1{
     padding: 0;
     padding-top: 94px;
     padding-bottom: 94px;
-    margin-left: auto;
-    margin-right: auto;
-} 
-/* .li-section2:not(:nth-child(4n)){
-    margin-right: 30px;
-} */
+    margin: 0;
+}
 .description-section2-h3{
     font-weight: 700;
     font-size: 14px;
@@ -193,13 +181,9 @@ h1{
     margin: 0;
     margin-right: 30px;
     padding-top: 10px;
-} 
-/*section 3*/
-.section3>.container{
-    display:flex;
-    flex-direction: column;
-    margin: auto;
 }
+/*section 3*/
+
 .section3-h2{
     font-weight: 700;
     font-size: 36px;
@@ -208,28 +192,11 @@ h1{
     letter-spacing: 0.03em;
     color: #212121;
     margin: 0;
-} 
-.ul-section3{
-    display:flex;
-    justify-content: space-between;
-    padding-top:50px;
-    padding-bottom: 94px;
 }
 /*section 4*/
-
- .section4{
+.section4{
     background-color: #F5F4FA;
     margin:0 -200px 0 -200px;
-}
-.section4>.container{
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-}
-.ul-section4{
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 94px;
 }
 .section4-h2{
     font-weight: 700;
@@ -238,14 +205,7 @@ h1{
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    padding: 94px 0px 50px 0px;
-}
-.li-section4{
-    width: 270px;
-    height: 368px;
-    background-color: #fff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    
 }
 .section4-h3{
     font-weight: 500;
@@ -254,7 +214,6 @@ h1{
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    padding-top:30px;
 }
 .section4-position{
     font-weight: 400;
@@ -263,17 +222,11 @@ h1{
     text-align: center;
     letter-spacing: 0.03em;
     color: #757575;
-    padding-top: 10px;
 }
                             /*footer*/
- .footer{
+.footer{
     background-color: #2F303A;
     margin:0 -200px 0 -200px;
-}
-.footer>.container{
-    display: flex;
-    flex-direction: column;
-    margin: auto;
 }
 .footer-adress{
     font-weight: 400;
@@ -296,19 +249,6 @@ h1{
 .footer-contacts:hover,
 .footer-contacts:focus{
     color: #2196F3;
-} 
-footer .webstudiolink{
-    padding-top: 60px;
-    padding-bottom: 20px;
-}
-.address-footer{
-    padding-bottom: 9px;
-}
-.mail-footer{
-    padding-bottom: 9px;
-}
-.tel-footer{
-    padding-bottom: 60px;
 }
                              /*Портфолио*/ 
 
@@ -320,7 +260,7 @@ footer .webstudiolink{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    
+    /* identical to box height, or 162% */
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
