--- a/style.css
+++ b/style.css
@@ -279,6 +279,8 @@ h1{
     margin: auto;
 }
 .footer-adress{
+    display: flex;
+    flex-direction: column;
     font-weight: 400;
     font-size: 14px;
     font-style: normal;
@@ -286,15 +288,25 @@ h1{
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
+.footer-map{
+    padding-bottom: 9px;
+    color: #FFFFFF;
+}
+.footer-mail{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    padding-bottom: 9px;
+}
 .footer-contacts{
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-}
-.footer-map{
-    color: #FFFFFF;
+    padding-bottom: 60px;
 }
 .footer-adress:hover,
 .footer-adress:focus{
