--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header{
     display: flex;
     justify-content: center;
 }
-.section0{
+.section{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,7 +60,15 @@ ul.navlist li{
     display: flex;
 }
 .navlinkscont{
+    color: #757575;
     margin-left: 50px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    
+
 }
 .navlinkscontact-container{
     display: flex;
@@ -152,9 +160,6 @@ h1{
 .navlistcontacts{
     
 }
-.navlinkscont{
-    color: inherit;
-}
 .navlinkscont:hover,
 .navlinkscont:focus{
     color:#2196F3;
@@ -221,7 +226,7 @@ h1{
 }
 /*section 4*/
 
- .section4{
+.section4{
     background-color: #F5F4FA;
     margin:0 -200px 0 -200px;
 }
@@ -270,7 +275,7 @@ h1{
     padding-top: 10px;
 }
                             /*footer*/
- .footer{
+.footer{
     background-color: #2F303A;
 }
 .footer>.container{
@@ -308,12 +313,16 @@ h1{
     color: rgba(255, 255, 255, 0.6);
     padding-bottom: 60px;
 }
-.footer-adress:hover,
-.footer-adress:focus{
+.footer-map:hover,
+.footer-map:focus{
     color: #2196F3;
 }
 .footer-contacts:hover,
 .footer-contacts:focus{
+    color: #2196F3;
+} 
+.footer-mail:hover,
+.footer-mail:focus{
     color: #2196F3;
 } 
 footer .webstudiolink{
@@ -354,6 +363,7 @@ main>.container{
     margin-right: 8px;
     padding: 6px 22px;
     background-color: #F5F4FA;
+    border-radius: 4px;
 }
 .portfolio{
     margin:94px 0px 50px 0px;
@@ -398,9 +408,12 @@ main>.container{
 .ul-gallery{
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 94px;
 }
-.li-gallery{
-    margin-right: 30px;
+
+.li-gallery:not(:nth-last-child(-n+3)){
     margin-bottom: 30px;
 }
-.li-gallery:not()
+.li-gallery:not(:nth-child(3n)){
+    margin-right: 30px;
+}
