--- a/style.css
+++ b/style.css
@@ -237,6 +237,9 @@ h1{
 .li-img:not(:nth-child(3n)){
     margin-right: 30px;
 }
+.li-img:not(:nth-last-child(-n+3)){
+    margin-bottom: 30px;
+}
 /*section 4*/
 
 .section4{
@@ -250,6 +253,7 @@ h1{
     display: flex;
     flex-wrap: wrap;
 }
+
 .section4-h2{
     font-weight: 700;
     font-size: 36px;
