--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ footer .webstudiolink{
     margin-right: 8px;
 }
 .portfolio{
-    padding:94px 0px 50px 0px;
+    margin:94px 0px 50px 0px;
 }
 .filter:hover,
 .filter:focus {
