--- a/style.css
+++ b/style.css
@@ -401,10 +401,13 @@ footer .webstudiolink{
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    border: 1px solid #EEEEEE;
+    /* border: 1px solid #EEEEEE; */
 }
 .gallery-ph3{
-    margin: 20px 24px 20px 24px;
+    padding: 20px 24px 20px 24px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
 }
 .gallery-h3{
     font-weight: 700;
